fix(card): updated support for right aligned

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -36,6 +36,12 @@
   --pf-c-card__header-toggle--MarginRight: var(--pf-global--spacer--xs);
   --pf-c-card__header-toggle--MarginBottom: calc(var(--pf-global--spacer--form-element) * -1);
   --pf-c-card__header-toggle--MarginLeft: calc(var(--pf-global--spacer--md) * -1);
+  --pf-c-card__actions--MarginTop: 0;
+  --pf-c-card__actions--MarginRight: 0;
+  --pf-c-card__actions--MarginBottom: 0;
+  --pf-c-card__actions--MarginLeft: 0;
+  --pf-c-card__actions__dropdown--MarginTop: calc(var(--pf-global--spacer--form-element) * -1);
+  --pf-c-card__actions__dropdown--MarginBottom: calc(var(--pf-global--spacer--form-element) * -1);
   --pf-c-card__header-toggle-icon--Transition: var(--pf-global--Transition);
   --pf-c-card--m-expanded__header-toggle-icon--Rotate: 90deg;
   --pf-c-card--m-full-height--Height: 100%;
@@ -196,13 +202,17 @@
 }
 
 .pf-c-card__actions {
+  --pf-c-card__header-toggle--MarginTop: var(--pf-c-card__actions--MarginTop); // remove at breaking change
+  --pf-c-card__header-toggle--MarginRight: var(--pf-c-card__actions--MarginRight); // remove at breaking change
+  --pf-c-card__header-toggle--MarginBottom: var(--pf-c-card__actions--MarginBottom); // remove at breaking change
+  --pf-c-card__header-toggle--MarginLeft: var(--pf-c-card__actions--MarginLeft); // remove at breaking change
+
   display: flex;
   align-items: center;
   align-self: flex-start;
   order: 1;
   padding-left: var(--pf-c-card__actions--PaddingLeft);
   margin: var(--pf-c-card__header-toggle--MarginTop) var(--pf-c-card__header-toggle--MarginRight) var(--pf-c-card__header-toggle--MarginBottom) auto;
-
 
   > * + * {
     margin-left: var(--pf-c-card__actions--child--MarginLeft);
@@ -212,6 +222,11 @@
   + .pf-c-card__body,
   + .pf-c-card__footer {
     padding: 0;
+  }
+
+  .pf-c-dropdown {
+    margin-top: var(--pf-c-card__actions__dropdown--MarginTop);
+    margin-bottom: var(--pf-c-card__actions__dropdown--MarginBottom);
   }
 }
 
